--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/Harshisonline/MongoDb#readme",
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.9.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.4",
+    "nodemon": "^3.1.9"
   }
 }
